Resolved ListBox issues in GameUI