@@ -1,15 +1,16 @@
 import com.googlecode.lanterna.*;
 import com.googlecode.lanterna.gui2.*;
-import com.googlecode.lanterna.gui2.ListBox;
+import com.googlecode.lanterna.gui2.ActionListBox;
+import com.googlecode.lanterna.gui2.Panel;
 import com.googlecode.lanterna.input.*;
 import com.googlecode.lanterna.screen.*;
 import com.googlecode.lanterna.terminal.*;
 
 import java.io.IOException;
 import java.time.Clock;
+import java.time.Duration;
 import java.time.Instant;
-import java.util.List;
-import java.util.Timer;
+import java.util.*;
 import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.atomic.AtomicInteger;
 
@@ -21,7 +22,7 @@ public class GameUI {
     private MultiWindowTextGUI gui;
     private Window mainWindow;
     private TextBox inputBox;
-    private ListBox<String> suggestions;
+    private ActionListBox suggestions;
     private Label timerLabel;
     private Label playerInfoLabel;
     private Label historyLabel;
@@ -34,13 +35,15 @@ public class GameUI {
     private volatile boolean timerRunning = false;
     private Instant turnStartTime;
 
+    private Autocomplete ac;
+
 //    private ScheduledExecutorService scheduler;
 //    // we give them 30 seconds before time is up
 //    private int secondsRemaining = 30;
 //    private boolean timerRunning = true;
 
     // constructor
-    public GameUI() throws IOException{
+    public GameUI() throws IOException {
         // initialize the terminal and screen
         terminal = new DefaultTerminalFactory().createTerminal();
         screen = new TerminalScreen(terminal);
@@ -49,42 +52,60 @@ public class GameUI {
         // create GUI
         gui = new MultiWindowTextGUI(screen, new DefaultWindowManager(), new EmptySpace(TextColor.ANSI.BLUE));
 
+        buildUI();
+        setUpListeners();
+        showMainWindow();
+        setUpTimer();
+        startTurnTimer();
+    }
+
+    private void buildUI() {
         // create main window
         mainWindow = new BasicWindow("Movie Name Game");
-        mainWindow.setHints(List.of(Window.Hint.FULL_SCREEN, Window.Hint.NO_DECORATIONS));
+        mainWindow.setHints(Arrays.asList(Window.Hint.FULL_SCREEN, Window.Hint.NO_DECORATIONS));
 
         // create panel with layout
         Panel panel = new Panel();
         panel.setLayoutManager(new GridLayout(2));
 
-        // add components
-        playerInfoLabel = new Label("30 seconds remaining");
+        // player info, timer, history labels
+        playerInfoLabel = new Label("Waiting for player...");
+        panel.addComponent(playerInfoLabel);
+        timerLabel = new Label("30 seconds remaining");
         panel.addComponent(timerLabel);
         historyLabel = new Label("Game history will appear here");
-        panel.addComponent(historyLabel.setLayoutData(GridLayout.createLayoutData(
+        panel.addComponent(historyLabel).setLayoutData(GridLayout.createLayoutData(
                 GridLayout.Alignment.FILL, GridLayout.Alignment.FILL, true,
-                true, 2, 1)));
+                true, 2, 1));
 
+        // input box
         inputBox = new TextBox(new TerminalSize(30, 1));
-        panel.addComponent(new Label("Enter movie title: "));
+        panel.addComponent(new Label("Enter movie title:"));
         panel.addComponent(inputBox);
 
-        suggestions = new ListBox<>();
-        panel.addComponent(new Label("Suggestions: "));
+        // sugg box
+        suggestions = new ActionListBox(new TerminalSize(30, 5));
+        panel.addComponent(new Label("Suggestions:"));
         panel.addComponent(suggestions);
 
-        // update player input live
+        mainWindow.setComponent(panel);
+    }
+
+    // update player input live
+    private void setUpListeners() {
         inputBox.setTextChangeListener((newText, changedByUser) -> {
-            if (changedByUser) {
+            if (changedByUser && ac != null) {
                 displayAutocompleteSuggestions(
-                        database.searchByTitlePrefix(newText)
+                        ac.getSuggestions(newText, 5)
                 );
             }
-        })
-
-        mainWindow.setComponent(panel);
+        });
+    }
+    private void showMainWindow() {
         gui.addWindowAndWait(mainWindow);
+    }
 
+    private void setUpTimer() {
         // Timer and clock
         gameTimer = new Timer(true);
         gameClock = Clock.systemDefaultZone();
@@ -104,34 +125,26 @@ public class GameUI {
                     this.cancel();
                     return;
                 }
-                Duration timeElapsed = Duration.between(turnStartTime. Instant.now(gameClock));
-                int remaining - (int) (30 - timeElapsed.getSeconds());
-                secondsRemaining.set(remaining > 0 ? remaining : 0);
+                Duration timeElapsed = Duration.between(turnStartTime, Instant.now(gameClock));
+                int remaining = (int) (30 - timeElapsed.getSeconds());
+                secondsRemaining.set(Math.max(remaining, 0));
 
-                try {
-                    gui.getGUIThread().invokeLater(() -> {
-                        timerLabel.setText("Time remaining: " + secondsRemaining.get());
-                        if (secondsRemaining.get() <= 0) {
-                            timerRunning = false;
-                            handleTimeUp();
-                        }
-                    });
-                } catch (IOException e) {
-                    e.printStackTrace();
-                }
+                gui.getGUIThread().invokeLater(() -> {
+                    timerLabel.setText("Time remaining: " + secondsRemaining.get());
+                    if (secondsRemaining.get() <= 0) {
+                        timerRunning = false;
+                        handleTimeUp();
+                    }
+                });
             }
         }, 0, 1000); // update every second
     }
 
     private void handleTimeUp() {
-        try {
-            gui.getGUIThread().invokelater(() -> {
-                // Display time's up
-                timerLabel.setText("Time's up!");
-            });
-        } catch (IOException e) {
-            e.printStackTrace();
-        }
+        gui.getGUIThread().invokeLater(() -> {
+            // Display time's up
+            timerLabel.setText("Time's up!");
+        });
     }
 
     public void stopTimer() {
@@ -140,17 +153,19 @@ public class GameUI {
 
     // display autocomplete suggestions
     public void displayAutocompleteSuggestions(final List<String> allSuggestions) {
-        try {
-            gui.getGUIThread().invokeLater(() -> {
-                suggestions.clearItems();
-                allSuggestions.forEach(suggestionsList::addItem);
-                if(!allSuggestions.isEmpty()) {
-                    allSuggestions.setSelectedIndex(0);
-                }
-            });
-        } catch (IOException e) {
-            e.printStackTrace();
-        }
+        gui.getGUIThread().invokeLater(() -> {
+            suggestions.clearItems();
+            if (!allSuggestions.isEmpty()) {
+                String first = allSuggestions.get(0);
+                suggestions.addItem(first, () -> useSuggestion(first));
+                allSuggestions.stream().skip(1).forEach(s -> suggestions.addItem(s, () -> useSuggestion(s)));
+            }
+        });
+    }
+
+    private void useSuggestion(String sugg) {
+        inputBox.setText(sugg);
+        inputBox.takeFocus();
     }
 
 //    // print a certain string of text with the set columns and rows
@@ -158,55 +173,79 @@ public class GameUI {
 //
 //    }
 //
-//    // update the timer display with the time remainitng
+//    // update the timer display with the time remaining
 //    private void updateTimerDisplay() throws IOException{
 //
 //    }
 //
 //    // displays their win condition for the players to see, including
 //    // their current progress towards it
-//    public void displayWinCondition (Player player){
-//
-//    }
+    public void displayWinCondition (Player player){
+        gui.getGUIThread().invokeLater(() -> {
+            // create panel for win condition display
+            Panel winConditionPanel = new Panel();
+            winConditionPanel.setLayoutManager(new LinearLayout(Direction.VERTICAL));
+            WinCondition wc = player.getWinCondition();
+
+            // clear previous components if they exist
+            winConditionPanel.removeAllComponents();
+
+            // player name
+            winConditionPanel.addComponent(new Label(player.getName() + "'s Win Condition")
+                    .setForegroundColor(background));
+
+            // progress bar
+            String prog = wc.getDescription();
+            winConditionPanel.addComponent(new Label(prog).setForegroundColor(foreground));
+
+            Panel mainPanel = (Panel) mainWindow.getComponent();
+            mainPanel.addComponent(winConditionPanel.setLayoutData(
+                    GridLayout.createLayoutData(
+                            GridLayout.Alignment.FILL, GridLayout.Alignment.BEGINNING,
+                            true, false,
+                            2, 1
+                    )
+            ));
+
+            // refresh UI
+            try {
+                screen.refresh();
+            } catch (IOException e) {
+                e.printStackTrace();
+            }
+        });
+    }
 
     // show current GameState on our screen
     public void showGameState(GameState state) {
         Player current = state.getCurrentPlayer();
-        try {
-            gui.getGUIThread().invokeLater(() -> {
-                playerInfoLabel.setText(current.getName() + "'s turn - " + current.getWinCondition().getDescription());
+        gui.getGUIThread().invokeLater(() -> {
+            playerInfoLabel.setText(current.getName() + "'s turn - ");
+            displayWinCondition(current);
 
-                // update game history
-                StringBuilder history = new StringBuilder("Recent movies: \n");
-                List<Movie> recentMovies = state.getPlayedMoviesHistory();
-                // display last 5 movies
-                int start = Math.max(0, historyMovies.size() - 5);
-                for (int i = start, i <recentMovies.size();
-                i++){
-                    Movie movie = historyMovies.get(i);
-                    history.append(movie.getTitle()).appeand(" (").append(movie.getReleaseYear()).append(")\n");
-                }
-                historyLabel.setText(history.toString());
+            // update game history
+            StringBuilder history = new StringBuilder("Recent movies: \n");
+            List<Movie> recentMovies = state.getPlayedMoviesHistory();
+            // display last 5 movies
+            int start = Math.max(0, recentMovies.size() - 5);
+            for (int i = start; i < recentMovies.size(); i++) {
+                Movie movie = recentMovies.get(i);
+                history.append(movie.getTitle()).append(" (").append(movie.getReleaseYear()).append(")\n");
+            }
+            historyLabel.setText(history.toString());
 
-                // start timer
-                startTurnTimer();
-            });
-        } catch (IOException e) {
-            e.printStackTrace();
-        }
+            // start timer
+            startTurnTimer();
+        });
     }
 
     // prompt the player for an action
     public String promptPlayer(Player currentPlayer) {
         // clear input box
-        try {
-            gui.getGUIThread().invokeLater(() -> {
-                inputBox.setText("");
-                inputBox.takeFocus();
-            });
-        } catch (IOException e) {
-            e.printStackTrace();
-        }
+        gui.getGUIThread().invokeLater(() -> {
+            inputBox.setText("");
+            inputBox.takeFocus();
+        });
 
         try {
             screen.refresh();
@@ -217,7 +256,7 @@ public class GameUI {
         // wait for player
         while (true) {
             // check for non-blocking
-            KeyStroke keystroke = null;
+            KeyStroke keyStroke = null;
             try {
                 keyStroke = screen.pollInput();
             } catch (IOException e) {
@@ -243,45 +282,41 @@ public class GameUI {
     public void showGameEnd(Player winner) {
         stopTimer();
 
-        try {
-            gui.getGUIThread().invokeLater(() -> {
-                // create modal dialog
-                Panel panel = new Panel();
-                panel.setLayoutManager(new GridLayout(1));
+        gui.getGUIThread().invokeLater(() -> {
+            // create modal dialog
+            Panel panel = new Panel();
+            panel.setLayoutManager(new GridLayout(1));
 
-                // announce winner
-                panel.addComponent(new Label(winner.getName() + " wins the game!")
-                        .setLayoutData(GridLayout.createLayoutData(
-                                GridLayout.Alignment.CENTER,
-                                GridLayout.Alignment.CENTER,
-                                true, true)));
+            // announce winner
+            panel.addComponent(new Label(winner.getName() + " wins the game!")
+                    .setLayoutData(GridLayout.createLayoutData(
+                            GridLayout.Alignment.CENTER,
+                            GridLayout.Alignment.CENTER,
+                            true, true)));
 
-                // game summary
-                panel.addComponent(new Label("Final Score: " + winner.getScore())
-                        .setLayoutData(GridLayout.createLayoutData(
-                                GridLayout.Alignment.CENTER,
-                                GridLayout.Alignment.CENTER,
-                                true, true)));
+            // game summary
+            panel.addComponent(new Label("Final Score: " + winner.getScore())
+                    .setLayoutData(GridLayout.createLayoutData(
+                            GridLayout.Alignment.CENTER,
+                            GridLayout.Alignment.CENTER,
+                            true, true)));
 
-                // play again button
-                Button quitButton = new Button("Quit", () -> {
-                    try {
-                        closeUI();
-                    } catch (IOException e) {
-                        e.printStackTrace();
-                    }
-                });
-                panel.addComponent(quitButton);
-
-                // display the dialog
-                BasicWindow endWindow = new BasicWindow("Game Over");
-                endWindow.setComponent(panel);
-                endWindow.setHints(List.of(Window.Hint.CENTERED));
-                gui.addWindow(endWindow);
+            // play again button
+            Button quitButton = new Button("Quit", () -> {
+                try {
+                    closeUI();
+                } catch (IOException e) {
+                    e.printStackTrace();
+                }
             });
-        } catch (IOException e) {
-            e.printStackTrace();
-        }
+            panel.addComponent(quitButton);
+
+            // display the dialog
+            BasicWindow endWindow = new BasicWindow("Game Over");
+            endWindow.setComponent(panel);
+            endWindow.setHints(Collections.singletonList(Window.Hint.CENTERED));
+            gui.addWindow(endWindow);
+        });
     }
 
 //     this is so if the user types in something that doesn't connect
@@ -289,26 +324,22 @@ public class GameUI {
     public void showError(String message) throws IOException{
         // we were inspired from online forms where there would be
         // "please try again" in red letters when we have a typo or invalid input
-        try {
-            gui.getGUIThread().invokeLater(() -> {
-                // show error
-                Label error = new Label(message).setForegroundColor(TextColor.ANSI.RED);
+        gui.getGUIThread().invokeLater(() -> {
+            // show error
+            Label error = new Label(message).setForegroundColor(TextColor.ANSI.RED);
 
-                // create popup
-                Panel errorPanel = new Panel();
-                errorPanel.setLayoutManager(new GridLayout(1));
-                errorPanel.addComponent(error);
-                errorPanel.addComponent(new Button("OK", () -> {
-                }));
+            // create popup
+            Panel errorPanel = new Panel();
+            errorPanel.setLayoutManager(new GridLayout(1));
+            errorPanel.addComponent(error);
+            errorPanel.addComponent(new Button("OK", () -> {
+            }));
 
-                BasicWindow errorWindow = new BasicWindow("Error");
-                errorWindow.setComponent(errorPanel);
-                errorWindow.setHints(List.of(Window.Hint.CENTERED));
-                gui.addWindow(errorWindow);
-            });
-        } catch (IOException e) {
-            e.printStackTrace();
-        }
+            BasicWindow errorWindow = new BasicWindow("Error");
+            errorWindow.setComponent(errorPanel);
+            errorWindow.setHints(Collections.singletonList(Window.Hint.CENTERED));
+            gui.addWindow(errorWindow);
+        });
     }
 
 
@@ -336,11 +367,15 @@ public class GameUI {
         terminal.close();
     }
 
-
-
-
-
-
-
+    public static void main(String[] args) {
+        try {
+            List<String> movies = Arrays.asList("Avengers", "Divergent", "Avatar", "Lion King");
+            Autocomplete ac = new Autocomplete(movies);
+            GameUI ui = new GameUI();
+            ui.ac = ac;
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+    }
 
 }
